// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Avatar AvatarLink 1`] = `
<div>
  <div
    class="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
  >
    <a
      class="avatar size-xl"
      href="#"
    >
      <img
        alt="Anna Barbieri"
        src="https://randomuser.me/api/portraits/women/41.jpg"
      />
    </a>
    <a
      class="avatar size-xl avatar-red"
      href="#"
    >
      <p
        aria-hidden="true"
      >
        MR
      </p>
      <span
        class="visually-hidden"
      >
        Mario Rossi
      </span>
    </a>
    <div
      class="avatar size-xl"
    >
      <svg
        class="icon"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M21.9 21.1 16 15.3c1.3-1.5 2-3.4 2-5.3 0-4.4-3.6-8-8-8s-8 3.6-8 8 3.6 8 8 8c1.9 0 3.8-.7 5.3-2l5.8 5.9.8-.8zM10 17c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Avatar AvatarLinkWithTooltip 1`] = `
<div>
  <div
    class="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
  >
    <a
      class="avatar size-xl"
      href="#"
    >
      <img
        alt="Anna Barbieri"
        src="https://randomuser.me/api/portraits/women/41.jpg"
      />
    </a>
    <a
      class="avatar size-xl avatar-red"
      href="#"
    >
      <p
        aria-hidden="true"
      >
        MR
      </p>
      <span
        class="visually-hidden"
      >
        Mario Rossi
      </span>
    </a>
    <a
      class="avatar size-xl"
      href="#"
    >
      <svg
        class="icon"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M21.9 21.1 16 15.3c1.3-1.5 2-3.4 2-5.3 0-4.4-3.6-8-8-8s-8 3.6-8 8 3.6 8 8 8c1.9 0 3.8-.7 5.3-2l5.8 5.9.8-.8zM10 17c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Avatar AvatarWithAdditionalText 1`] = `
<div>
  <div
    class="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
  >
    <div
      class="avatar-wrapper avatar-extra-text"
    >
      <div
        class="avatar size-xl"
      >
        <img
          alt="Mario Rossi"
          src="https://randomuser.me/api/portraits/men/33.jpg"
        />
      </div>
      <div
        class="extra-text"
      >
        <h4>
          <a
            href="#"
          >
            Mario Rossi
          </a>
        </h4>
        <time
          datetime="2018-09-15"
        >
          15 Set 2018
        </time>
      </div>
    </div>
    <div
      class="avatar-wrapper avatar-extra-text"
    >
      <div
        class="avatar size-xl"
      >
        <img
          alt="Guilia Neri"
          src="https://randomuser.me/api/portraits/women/33.jpg"
        />
      </div>
      <div
        class="extra-text"
      >
        <h4>
          Guilia Neri
        </h4>
        <p>
          Lorem ipsum dolor
        </p>
      </div>
    </div>
    <div
      class="avatar-wrapper avatar-extra-text"
    >
      <div
        class="avatar size-xl"
      >
        <img
          alt="Michele Dotti"
          src="https://randomuser.me/api/portraits/men/15.jpg"
        />
      </div>
      <div
        class="extra-text"
      >
        <h4>
          <a
            href="#"
          >
            Micehele Dotti
          </a>
        </h4>
        <time
          datetime="2018-09-15"
        >
          15 Mag 2018
        </time>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Avatar AvatarWithIcon 1`] = `
<div>
  <div
    class="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
  >
    <div
      class="avatar size-xs"
    >
      <svg
        class="icon"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M21.9 21.1 16 15.3c1.3-1.5 2-3.4 2-5.3 0-4.4-3.6-8-8-8s-8 3.6-8 8 3.6 8 8 8c1.9 0 3.8-.7 5.3-2l5.8 5.9.8-.8zM10 17c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
        />
      </svg>
    </div>
    <div
      class="avatar size-sm"
    >
      <svg
        class="icon"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M21.9 21.1 16 15.3c1.3-1.5 2-3.4 2-5.3 0-4.4-3.6-8-8-8s-8 3.6-8 8 3.6 8 8 8c1.9 0 3.8-.7 5.3-2l5.8 5.9.8-.8zM10 17c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
        />
      </svg>
    </div>
    <div
      class="avatar size-md"
    >
      <svg
        class="icon"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M21.9 21.1 16 15.3c1.3-1.5 2-3.4 2-5.3 0-4.4-3.6-8-8-8s-8 3.6-8 8 3.6 8 8 8c1.9 0 3.8-.7 5.3-2l5.8 5.9.8-.8zM10 17c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
        />
      </svg>
    </div>
    <div
      class="avatar size-lg"
    >
      <svg
        class="icon"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M21.9 21.1 16 15.3c1.3-1.5 2-3.4 2-5.3 0-4.4-3.6-8-8-8s-8 3.6-8 8 3.6 8 8 8c1.9 0 3.8-.7 5.3-2l5.8 5.9.8-.8zM10 17c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
        />
      </svg>
    </div>
    <div
      class="avatar size-xl"
    >
      <svg
        class="icon"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M21.9 21.1 16 15.3c1.3-1.5 2-3.4 2-5.3 0-4.4-3.6-8-8-8s-8 3.6-8 8 3.6 8 8 8c1.9 0 3.8-.7 5.3-2l5.8 5.9.8-.8zM10 17c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
        />
      </svg>
    </div>
    <div
      class="avatar size-xxl"
    >
      <svg
        class="icon"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M21.9 21.1 16 15.3c1.3-1.5 2-3.4 2-5.3 0-4.4-3.6-8-8-8s-8 3.6-8 8 3.6 8 8 8c1.9 0 3.8-.7 5.3-2l5.8 5.9.8-.8zM10 17c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Avatar AvatarWithImage 1`] = `
<div>
  <div
    class="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
  >
    <div
      class="avatar size-lg"
    />
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Avatar AvatarWithText 1`] = `
<div>
  <div
    class="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
  >
    <div
      class="avatar size-xs"
    >
      <p
        aria-hidden="true"
      >
        M
      </p>
      <span
        class="visually-hidden"
      >
        Mario Rossi
      </span>
    </div>
    <div
      class="avatar size-sm avatar-primary"
    >
      <p
        aria-hidden="true"
      >
        M
      </p>
      <span
        class="visually-hidden"
      >
        Mario Rossi
      </span>
    </div>
    <div
      class="avatar size-md avatar-secondary"
    >
      <p
        aria-hidden="true"
      >
        MR
      </p>
      <span
        class="visually-hidden"
      >
        Mario Rossi
      </span>
    </div>
    <div
      class="avatar size-lg avatar-green"
    >
      <p
        aria-hidden="true"
      >
        MR
      </p>
      <span
        class="visually-hidden"
      >
        Mario Rossi
      </span>
    </div>
    <div
      class="avatar size-xl avatar-orange"
    >
      <p
        aria-hidden="true"
      >
        MR
      </p>
      <span
        class="visually-hidden"
      >
        Mario Rossi
      </span>
    </div>
    <div
      class="avatar size-xxl avatar-red"
    >
      <p
        aria-hidden="true"
      >
        MR
      </p>
      <span
        class="visually-hidden"
      >
        Mario Rossi
      </span>
    </div>
  </div>
</div>
`;
